# huffmanzip

./: .gitignore  README.md  default.nix  meson.build  top.bobby285271.huffmanzip.json
data/: meson.build  top.bobby285271.huffmanzip.appdata.xml.in  top.bobby285271.huffmanzip.desktop.in  top.bobby285271.huffmanzip.gschema.xml
po/: POTFILES  meson.build  zh_CN.po
src/: decode.cpp  decode.h  encode.cpp  encode.h  huffmanzip-window.cpp  huffmanzip-window.h  huffmanzip-window.ui  huffmanzip.gresource.xml  main.cpp  meson.build  node.h  string-convert.cpp  string-convert.h  stringConvert.cpp  stringConvert.h  testio.cpp  testio.h
